# AetherOS

./: .gitignore  Cargo.toml  README.md  run.sh  rust-toolchain.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
compute/: Cargo.toml
compute/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: console.rs  ipc.rs  main.rs  safety.rs  scheduler.rs  sync.rs
kernel/src/arch/: linker.ld  mod.rs  riscv64.rs
vault/: Cargo.toml
vault/src/: lib.rs
